K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    name: ingress-srv
spec:
  rules:
  - host: mc-platforms.com
    http:
      paths:
      - pathType: Prefix
        path: "/api/v1/platform"
        backend:
          service:
            name: platform-clusterip-srv
            port: 
              number: 80
      - pathType: Prefix
        path: "/api/v1/command/platform"
        backend:
          service:
            name: command-clusterip-srv
            port:
              number: 80
